--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="leftbar">
             <p>это мой второй тестовый сайт в котором я изучил функции языков HTML и CSS если хотите можете ознакомится.</p>
             <p>This is my second test site in which I studied the functions of HTML and CSS languages, if you want you can take a look.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, architecto quae asperiores repellat numquam rerum animi, impedit nobis reprehenderit perferendis in magni libero deleniti quis dolorum laboriosam nostrum at dignissimos!</p>
+            <p>Прошу заметить что справа сверху наверху страницы расположена кнопка по нажатию которой открываются ссылки которые так-же никуда не ведут.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum perferendis recusandae aspernatur nihil vel quo enim repellat, laudantium incidunt fugit facilis accusantium laboriosam adipisci suscipit, eveniet nostrum. Esse, ut nobis?</p>
         </div>
         <div class="conteiner">
